# comfyui-plus-backend

./: CMakeLists.txt  README.md  build.sh  run.sh  sqlpp23-doc.md  sqlpp23-public-api.md
app/: CMakeLists.txt  config.json  main.cc
app/cmake/: FindArgon2.cmake  FindSqliteOrm.cmake
app/database/migrations/: 001_create_users_table.sql
app/include/comfyui_plus_backend/controllers/: AuthController.h  WorkflowController.h
app/include/comfyui_plus_backend/db/: DatabaseManager.h  models.h  schema.h  simple_storage.h
app/include/comfyui_plus_backend/db_schema/: Users.h
app/include/comfyui_plus_backend/filters/: JwtAuthFilter.h
app/include/comfyui_plus_backend/models/: User.h
app/include/comfyui_plus_backend/services/: AuthService.h  DbConnectionPool.h  JwtService.h  UserService.h
app/include/comfyui_plus_backend/utils/: DateTimeUtils.h  PasswordUtils.h
app/models/: User.cc  User.h
app/src/controllers/: AuthController.cc  WorkflowController.cc
app/src/db/: DatabaseManager.cc
app/src/filters/: JwtAuthFilter.cc
app/src/models/: User.cc
app/src/services/: AuthService.cc  DbConnectionPool.cc  JwtService.cc  UserService.cc
app/src/utils/: PasswordUtils.cc
